# llvm-project

clang/examples/: CMakeLists.txt
clang/examples/me-serialization/: CMakeLists.txt  main.cpp
clang/examples/me-serialization/include/: alias_types.h  entity.h  scene.h  test1.h  test2.h
clang/examples/me-serialization/include/component/: camera.h  component.h  light.h  transform.h
clang/include/clang/Basic/: Attr.td  DiagnosticParseKinds.td
clang/lib/Sema/: SemaDeclAttr.cpp
clang/tools/: CMakeLists.txt
clang/tools/me-serialization/: CMakeLists.txt  compiler.cpp  me_attributes.h  record_info.proto
clang/tools/me-serialization-v2/: CMakeLists.txt  record_info.cpp  record_info.h  serializable_generator.cpp  serializable_generator.h
clang/tools/me-serialization-v2/compiler/: CMakeLists.txt  CodeGenerator.cpp  CodeGenerator.h  CodeGuard.h  Diagnostic.td  DiagnosticMES11nKinds.td  IndexManager.cpp  IndexManager.h  RecordDatabase.cpp  RecordDatabase.h  RecordInfo.cpp  RecordInfo.h  SerializableConsumer.cpp  SerializableConsumer.h  code_guard.cpp  code_guard.h  compiler.cpp  indexer.cpp  indexer.h  record_database.cpp  record_database.h  record_info.cpp  record_info.h  serializable_generator.cpp  serializable_generator.h
clang/tools/me-serialization-v2/database/: CMakeLists.txt  record_database.cpp  record_database.h
clang/tools/me-serialization-v2/include/me/s11n/: built_in_type_coder.h  built_in_types_helper.h  endianness_helper.h  field_coder.h  log2_floor_helper.h  port.h
clang/tools/me-serialization-v2/serialization/: built_in_type_coder.h  built_in_types_helper.h  codede.cpp  codede.h  field_coder.h  log2_floor_helper.h  serializable.cpp  serializable.h
clang/tools/me-serialization-v2/src/: CMakeLists.txt  TodoList  main.cpp
clang/tools/me-serialization-v2/src/common/: CodeGenerator.h  CodeGuard.cpp  PathHelper.h  PostfixNames.h  RecordDatabase.cpp  RecordDatabase.h  RecordInfo.cpp  RecordInfo.h  RecordInfo.mes11n.h
clang/tools/me-serialization-v2/src/compiler/: CustomAnnotation.cpp  DiagMsg.h  ObjectEncoder.h  SerializableConsumer.cpp  SerializableConsumer.h
clang/tools/me-serialization-v2/src/linker/: ObjectDecoder.cpp  ObjectDecoder.h
clang/tools/me-serialization-v2/test/: CMakeLists.txt  PathCoderTest.cpp  base_derive.h  base_derive.s11n.h  built_in_type_s11n_test.cpp  built_in_type_serialize_test.cpp  custom_type_s11n_test.cpp  database_test.cpp  example_record_database.db  foo.h  foo.s11n.h  lllll.cpp  me_s11n_core.cpp  rtti_type_test.cpp
clang/tools/me-serialization/example/: compile_commands.json  example_1.h  main.cpp
clang/tools/me-serialization/example/compile_commands_linux/: compile_commands.json
clang/tools/me-serialization/example/compile_commands_windows/: compile_commands.json
